--- a/templates/wheretofindme/edit_aliases.html
+++ b/templates/wheretofindme/edit_aliases.html
@@ -40,6 +40,7 @@
           <button
             type="button"
             class="btn btn-outline-danger float-right"
+            aria-label="Remove alias"
           >
             <span class="fas fa-minus-circle"></span>
           </button>
@@ -48,7 +49,7 @@
     </div>
   </div>
   {% endfor %}
-  <button class="btn add-alias btn-outline-primary float-right">
+  <button class="btn add-alias btn-outline-primary float-right" aria-label="Add alias">
     <span class="fas fa-plus-circle"></span>
   </button>
 </form>
