--- a/templates/wheretofindme/edit_identities.html
+++ b/templates/wheretofindme/edit_identities.html
@@ -24,7 +24,7 @@
           <input type="text" class="form-control" id="name-{{ identity.id }}" name="name" value="{{ identity.name }}" placeholder="My blog…">
         </div>
         <div class="col-sm-1">
-          <button type="button" class="btn delete btn-outline-danger float-right">
+          <button type="button" class="btn delete btn-outline-danger float-right" aria-label="Remove identity">
             <span class="fas fa-minus-circle"></span>
           </button>
         </div>
@@ -35,7 +35,7 @@
           <input type="text" class="form-control" id="url-{{ identity.id }}" name="url" value="{{ identity.url }}" placeholder="https://example.com/">
         </div>
         <div class="col-sm-1">
-          <button type="button" class="btn btn-link float-right expand-identity">
+          <button type="button" class="btn btn-link float-right expand-identity" aria-label="Expand identity">
             <span class="fas fa-ellipsis-h"></span>
           </button>
         </div>
@@ -43,7 +43,7 @@
     </div>
   </div>
   {% endfor %}
-  <button type="button" class="btn add-identity btn-outline-primary float-right">
+  <button type="button" class="btn add-identity btn-outline-primary float-right" aria-label="Add identity">
     <span class="fas fa-plus-circle"></span>
   </button>
 </form>
