--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -51,7 +51,8 @@ $border-radius-sm:            .3rem !default;
 
 // Fonts
 
-$headings-font-family:        "Montserrat", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$body-font-family:            -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$headings-font-family:        join((caroni), $body-font-family, 'comma') !default;
 $headings-color:              $gray-700 !default;
 
 // Tables
