--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -19,7 +19,7 @@
 {% block "main" %}
 <div class="position-relative">
   <h1 class="text-center">
-    <small class="text-muted font-italic">Where to find</small>
+    <small class="text-muted">where to find</small>
     <br>
     {{ object.primary_alias }}
   </h1>
