--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom shadow-sm" role="navigation">
       <a class="navbar-brand flex-grow-1" href="/">
         <img src="{% static 'images/logo-50.png' %}" class="img-fluid" alt="Where to Find Me logo">
-        Where to find me
+        where to find me
       </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-bar" aria-controls="nav-bar" aria-expanded="false" aria-label="Toggle navigation">
