--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
 <form method="post" action="{% url "login" %}">
   {% csrf_token %}
   {{ form|crispy }}
-  <input type="submit" class="btn btn-primary" value="Sign in">
+  <input type="submit" class="btn btn-primary btn-lg" value="Sign in">
 </form>
 <p>
   <a href="{% url 'password_reset' %}">Forgot your password?</a>
