--- a/templates/wheretofindme/edit_aliases.html
+++ b/templates/wheretofindme/edit_aliases.html
@@ -17,40 +17,11 @@
 
 
 <form id="edit-aliases-form" class="clearfix">
-  <div class="pb-3 custom-control custom-switch">
-    <input
-      type="checkbox"
-      id="include-in-search"
-      class="custom-control-input"
-      {% if user.search_enabled %}checked{% endif %}
-      />
-    <label class="custom-control-label" for="include-in-search">
-      Include me in search results
-    </label>
-  </div>
-  {% for alias in aliases %}
-  <div class="alias card bg-light shadow-sm w-100 mb-3" data-id="{{ alias.id }}">
-    <div class="card-body">
-      <div class="form-group row">
-        <label for="name-{{ alias.id }}" class="col-sm-2 col-form-label">Name</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" id="name-{{ alias.id }}" name="name" value="{{ alias.name }}">
-        </div>
-        <div class="col-sm-1" v-if="index > 0">
-          <button
-            type="button"
-            class="btn btn-outline-danger float-right"
-            aria-label="Remove alias"
-          >
-            <span class="fas fa-minus-circle"></span>
-          </button>
-        </div>
-      </div>
+  <noscript>
+    <div class="alert alert-danger" role="alert">
+      Sorry! You need to have JavaScript enabled to edit your list of aliases.
     </div>
-  </div>
-  {% endfor %}
-  <button class="btn add-alias btn-outline-primary float-right" aria-label="Add alias">
-    <span class="fas fa-plus-circle"></span>
-  </button>
+  </noscript>
+  {% include "wheretofindme/_loading.svg" %}
 </form>
 {% endblock "main" %}
