--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,5 @@
 // Minty 4.2.1
+// with a bunch of changes
 // Bootswatch
 
 //
@@ -28,20 +29,20 @@ $green:   #56CC9D !default;
 $teal:    #20c997 !default;
 $cyan:    #6CC3D5 !default;
 
-$primary:       #78C2AD !default;
-$secondary:     #F3969A !default;
+$primary:       $color-primary-3 !default;
+$secondary:     $color-secondary-1-3 !default;
 $success:       $green !default;
 $info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-100 !default;
+$warning:       $color-secondary-1-3 !default;
+$danger:        $color-secondary-2-3 !default;
+$light:         $gray-200 !default;
 $dark:          $gray-800 !default;
 
 $yiq-contrasted-threshold: 250 !default;
 
 // Body
 
-$body-color:                $gray-600 !default;
+$body-color:                $gray-700 !default;
 
 // Components
 
