--- a/templates/wheretofindme/edit_aliases.html
+++ b/templates/wheretofindme/edit_aliases.html
@@ -3,12 +3,12 @@
 
 {% block "main" %}
 <h1>What do people call you?</h1>
-<p class="text-muted text-justify">
+<p class="text-justify">
   Hit the plus to add a new alias, hit the minus to remove it, and drag and
   drop them to arrange them into your preferred order. They save as soon as you
   click elsewhere.
 </p>
-<p class="text-muted text-justify">
+<p class="text-justify">
   Your first alias is the default, used throughout the site to identify you.
   You can’t remove it, but you can change it. If you make yourself searchable,
   people can find you if they know any of your aliases. All your aliases are
