Allow full height cards in edit mode

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -18,7 +18,8 @@
   height: 5em;
 }
 
-.card-body {
+.preview-card .card-body,
+.detail-card .card-body {
   overflow: scroll;
   max-height: 8rem;
 }
