--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -43,7 +43,7 @@
   {% for identity in identities %}
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <div class="card bg-light shadow-sm mb-3">
+      <div class="detail-card card bg-light shadow-sm mb-3">
         {% if identity.looks_like_link %}
         <div class="card-body">
           <a rel="me nofollow" href="{{ identity.url }}" aria-label="{{ identity.name }}">
