--- a/templates/wheretofindme/edit_identities.html
+++ b/templates/wheretofindme/edit_identities.html
@@ -10,9 +10,9 @@
 </p>
 <p class="text-justify">
   If you want your links to be clickable, copy and paste in the entire
-  address to your profile on another site. For some services, such as
-  Discord, this isn't possible, so you can just put in your username and
-  we'll display it.
+  address to your profile on another site. For some services this isn't
+  possible, so you can just put in your username or other identifier and we'll
+  display it.
 </p>
 <form id="edit-identities-form" class="clearfix">
   <noscript>
