--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -91,10 +91,10 @@
   {% endfor %}
 </div>
 <p class="col-md-8 offset-md-2">
-  <small>Added without your consent? Please
+  <small>Added without your consent?
   <a
     href="mailto:admin@wheretofind.me?subject=Where%20to%20Find%20Me%20removal%20request%20from%20{{ object.username }}"
-    >contact us</a> to remove this entry.</small>
+    >Contact us</a> to remove this entry.</small>
 </p>
 {% else %}
 <div class="text-center">
