--- a/templates/wheretofindme/search.html
+++ b/templates/wheretofindme/search.html
@@ -6,7 +6,7 @@
 
 <div>
   {% for object in object_list %}
-  <div class="card border-info shadow-sm mb-3">
+  <div class="preview-card card border-info shadow-sm mb-3">
     <div class="card-header">
       <a href="{% url "user-profile" slug=object.username %}">
         {{ object.primary_alias }}
@@ -15,12 +15,9 @@
       {% include "wheretofindme/_favstar.html" with object=object %}
     </div>
     <div class="card-body">
-      {% for identity in object.first_three.0 %}
+      {% for identity in object.identities %}
       {% include "wheretofindme/_identity.html" with identity=identity  %}
       {% endfor %}
-      {% if object.first_three.1 %}
-      &hellip;
-      {% endif %}
     </div>
   </div>
   {% empty %}
