Allow followed users to always be found in search
Including via your nickname for them.

Fixes #105.

--- a/templates/wheretofindme/edit_aliases.html
+++ b/templates/wheretofindme/edit_aliases.html
@@ -12,9 +12,9 @@
   Your first alias is the default, used throughout the site to identify you.
   You can’t remove it, but you can change it. If you make yourself searchable,
   people can find you if they know any of your aliases. All your aliases are
-  visible to anyone who looks at your profile.
+  visible to anyone who looks at your profile. Anyone who follows you can
+  always find you in search.
 </p>
-
 
 <form id="edit-aliases-form" class="clearfix">
   <noscript>
