a stab at re-wording the identity editor instructions

--- a/templates/wheretofindme/edit_identities.html
+++ b/templates/wheretofindme/edit_identities.html
@@ -5,8 +5,9 @@
 <h1>Where are you?</h1>
 <p class="text-justify">
   Hit the plus to add a new location, hit the minus to remove it, and drag
-  and drop them to arrange them into your preferred order. They save as soon
-  as you click elsewhere.
+  and drop them to arrange them into your preferred order. The text you enter
+  auto-saves when it looks like you're done entering it; to make it clear when
+  you are, use the "save" button.
 </p>
 <p class="text-justify">
   If you want your links to be clickable, copy and paste in the entire
