--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -10,7 +10,7 @@
 {% block "opengraph" %}
 <meta property="og:title" content="Where to find {{ object.primary_alias }}" />
 <meta property="og:type" content="profile" />
-<meta property="og:url" content="{{ here }}" />
+<meta property="og:url" content="{{request.build_absolute_uri}}" />
 <meta property="og:image" content="{% static 'images/logo-with-bg.png' %}" />
 <meta property="og:image:alt" content="Where to Find Me logo" />
 <meta property="og:description" content="A calling card for the internet." />
